# URITOMO-Backend

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  run.sh
.github/: pull_request_template.md
app/: main.py
app/ai/: __init__.py  ai_gate.py
app/api/: router.py
app/api/dm/: __init__.py  messages.py  threads.py  ws.py
app/api/room/: create.py  messages.py
app/api/summary/: setup_mock.py
app/api/user/: friend.py  friends.py  login.py  main.py  profile.py  room_detail.py
app/api/v1/: router.py
app/api/v1/ai/: segments.py  ws_realtime.py
app/api/v1/auth/: login.py  orgs.py  users.py
app/api/v1/core/: auth.py  health.py  meetings.py
app/api/v1/examples/: openai.py
app/api/v1/rooms/: router.py
app/api/v1/summary/: documents.py  main.py  setup_mock.py
app/api/v1/user/: main.py  setup_mock.py
app/core/: config.py  deps.py  errors.py  logging.py  security.py  time.py  token.py
app/dashboard/: data_app.py
app/debug/: api.py  for_live.py  login.py  session.py  signin.py
app/example/: README.md  __init__.py  crud.py  router.py  schemas.py
app/example/token/: router.py
app/example/user/: router.py
app/infra/: queue.py
app/meeting/: api.py  live_history.py  schemas.py  sessions.py  stt_events.py
app/meeting/livekit/: __init__.py  api.py  events.py  livekit_gate.py
app/meeting/ws/: manager.py  stt_listener.py  ws_ai.py  ws_base.py  ws_message.py
app/models/: __init__.py  ai.py  base.py  dm.py  friend.py  live.py  message.py  room.py  stt.py  token.py  user.py
app/services/: connection_manager.py
app/summarization/: documents.py  main.py  meeting_member.py  router.py  translation_log.py
app/summarization/logic/: ai_summary.py  generate_large_json.py  meeting_data.py  summary_prompt.txt
app/summarization/logic/JSON/: generated_meeting_data.json  large_meeting_data.json  summary_result.json
app/translation/: api.py  deepl_service.py  openai_service.py  schemas.py  speaking_ai.py
app/user/: personal_chat.py
app/worker/: __init__.py  worker_token.py
core/: logging_system.py
migrations/: env.py
migrations/versions/: 001_initial_media.py  001_initial_schema.py  002_add_user_friends.py  003_add_dm_tables.py  004_update_schema_live_sessions_and_enums.py  006_remove_live_table.py  007_add_stt_ai_tables.py  008_add_chat_msg_trans_cols.py  009_add_roominvitation.py
scripts/: debug_db.py  generate_migration.py  test_example_crud.py
workers/: audio_sniffer.py  publish_dual_outputs.py  realtime_agent.py
